--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "modern-normalize": "^2.0.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-intersection-observer": "^9.8.1",
     "react-redux": "^9.1.0",
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.22.2",
     "react-scripts": "5.0.1",
+    "react-spring": "^9.7.3",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
